# sleeper-api-py

./: .gitignore  README.md  pyproject.toml
sleeper_api/: __init__.py  api.py  logger.py  session.py
tests/: test_drafts.py  test_leagues.py  test_nfl.py  test_users.py
